--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
+    "glob": "^11.0.1",
     "http": "^0.0.1-security",
     "socket.io": "^4.8.1"
   }
